fix: update events to Stage 3 and resolve footer overlap bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,10 +38,7 @@
 
 html {
   overflow-x: clip !important;
-  overflow-y: auto;
-  width: 100%;
   max-width: 100% !important;
-  height: 100%;
   -webkit-text-size-adjust: 100%;
 }
 
